--- a/po/es_ES.po
+++ b/po/es_ES.po
@@ -2,12 +2,13 @@
 # gguerrer <gguerrer@fedoraproject.org>, 2012. #zanata
 # Gladys Guerrero Lozano <gladysguerrerolozano419@gmail.com>, 2013. #zanata
 # gguerrer <gguerrer@fedoraproject.org>, 2013. #zanata
+# Gladys Guerrero Lozano <gladysguerrerolozano419@gmail.com>, 2014. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-06-27 12:35-0400\n"
-"PO-Revision-Date: 2013-09-17 08:14-0400\n"
+"PO-Revision-Date: 2014-01-15 01:24-0500\n"
 "Last-Translator: Gladys Guerrero Lozano <gladysguerrerolozano419@gmail.com>\n"
 "Language-Team: Spanish (Spain)\n"
 "MIME-Version: 1.0\n"
@@ -15,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: es-ES\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"X-Generator: Zanata 3.0.3\n"
+"X-Generator: Zanata 3.2.3\n"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -200,22 +201,22 @@ msgstr "{0} ha borrado el ID de huésped {1}"
 #: src/main/java/org/candlepin/audit/EventAdapterImpl.java:162
 #, java-format
 msgid "{0} updated the rules in the databse to version {1}"
-msgstr ""
+msgstr "{0} actualizó las reglas en la base de datos a la versión {1}"
 
 #: src/main/java/org/candlepin/audit/EventAdapterImpl.java:164
 #, java-format
 msgid "{0} removed the rules from the database"
-msgstr ""
+msgstr "{0} retiró las reglas de la base de datos"
 
 #: src/main/java/org/candlepin/resource/ConsumerContentOverrideResource.java:110
 #, java-format
 msgid "Not allowed to override values for: {0}"
-msgstr ""
+msgstr "No está permitido sobrescribir valores para: {0}"
 
 #: src/main/java/org/candlepin/resource/ConsumerContentOverrideResource.java:190
 #, java-format
 msgid "Name and value of the override must not exceed {0} characters."
-msgstr ""
+msgstr "Nombre y valor de sobrescritos deben exceder {0}"
 
 #: src/main/java/org/candlepin/resource/UserResource.java:141
 #, java-format
@@ -284,7 +285,7 @@ msgstr ""
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:298
 #, java-format
 msgid "Consumer with id {0} could not be found."
-msgstr ""
+msgstr "No se encontró el usuario con ID {0}."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author gguerrer
@@ -469,7 +470,7 @@ msgstr ""
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:1750
 #, java-format
 msgid "A CDN with label {0} does not exist on this system."
-msgstr ""
+msgstr "CDN con etiqueta {0} no existe en el sistema."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -584,16 +585,17 @@ msgstr "No se encontró el grupo con ID {0}. "
 #, java-format
 msgid "Guest ID in json \"{0}\" does not match path guest ID \"{1}\""
 msgstr ""
+"ID de huésped en Json \"{0}\" no coincide con ID de huésped  de ruta \"{1}\""
 
 #: src/main/java/org/candlepin/resource/GuestIdResource.java:187
 #, java-format
 msgid "Consumer with uuid {0} could not be found."
-msgstr ""
+msgstr "No se encontró el consumidor con UUID {0}."
 
 #: src/main/java/org/candlepin/resource/GuestIdResource.java:221
 #, java-format
 msgid "Guest with uuid {0} could not be found."
-msgstr ""
+msgstr "No se encontró huésped con UUID {0}."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -684,8 +686,8 @@ msgid ""
 "The activation key name ''{0}'' must be alphanumeric or include the "
 "characters '-' or '_'"
 msgstr ""
-"El nombre de llave de activación ''{0}'' debe ser alfanumérico o incluye los"
-" caracteres '-' o '_'"
+"El nombre de llave de activación ''{0}'' debe ser alfanumérico o incluye los "
+"caracteres '-' o '_'"
 
 #: src/main/java/org/candlepin/resource/OwnerResource.java:509
 #, java-format
@@ -696,12 +698,12 @@ msgstr ""
 #: src/main/java/org/candlepin/resource/OwnerResource.java:578
 #, java-format
 msgid "{0} is not a valid log level"
-msgstr ""
+msgstr "{0} No es un nivel de registro válido"
 
 #: src/main/java/org/candlepin/resource/OwnerResource.java:657
 #, java-format
 msgid "No such unit type(s): {0}"
-msgstr ""
+msgstr "No existe dicho tipo de unidad: {0}"
 
 #: src/main/java/org/candlepin/resource/OwnerResource.java:700
 #: src/main/java/org/candlepin/resource/PoolResource.java:142
@@ -747,8 +749,8 @@ msgstr "Problema al generar certificado Ueber para propietario {0}"
 #, java-format
 msgid "ueber certificate for owner {0} was not found. Please generate one."
 msgstr ""
-"No se encontró el certificado Ueber para propietario  {0}. Por favor generar"
-" uno.  "
+"No se encontró el certificado Ueber para propietario  {0}. Por favor generar "
+"uno.  "
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author gguerrer
@@ -841,6 +843,7 @@ msgstr "Tarea ya cancelada"
 #: src/main/java/org/candlepin/resource/JobResource.java:200
 msgid "cannot cancel a job that is not in CREATED or WAITING state"
 msgstr ""
+"No se puede cancelar una tarea que no esté en el estado CREADO o en ESPERA. "
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author gguerrer
@@ -879,12 +882,12 @@ msgstr "No se encontró el tipo de unidad con ID {0} ."
 #: src/main/java/org/candlepin/resource/CdnResource.java:93
 #, java-format
 msgid "A CDN with the label {0}already exists"
-msgstr ""
+msgstr "Un CDN con la etiqueta {0}ya existe"
 
 #: src/main/java/org/candlepin/resource/CdnResource.java:128
 #, java-format
 msgid "No such content delivery network: {0}"
-msgstr ""
+msgstr "No existe dicha red de entrega de contenido: {0}"
 
 #: src/main/java/org/candlepin/resource/DistributorVersionResource.java:104
 #, java-format
@@ -898,42 +901,42 @@ msgstr "No existe distribuidor: {0}"
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:58
 msgid "Not supported by a valid subscription."
-msgstr ""
+msgstr "No está soportado por una suscripción válida"
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:61
 #, java-format
 msgid "Supports architecture {0} but the system is {1}."
-msgstr ""
+msgstr "Soporta arquitectura {0} pero el sistema es {1}."
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:66
 #, java-format
 msgid "Only supports {0} of {1} sockets."
-msgstr ""
+msgstr "Solamente soporta {0} de {1} conectores."
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:71
 #, java-format
 msgid "Only supports {0} of {1} cores."
-msgstr ""
+msgstr "Solamente soporta {0} de {1} núcleos."
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:76
 #, java-format
 msgid "Only supports {0}GB of {1}GB of RAM."
-msgstr ""
+msgstr "Solamente soporta {0}GB de {1}GB de RAM."
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:81
 #, java-format
 msgid "Only supports {0} of {1} virtual guests."
-msgstr ""
+msgstr "Solamente soporta {0} de {1} huéspedes virtuales."
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:86
 #, java-format
 msgid "Only supports {0} of {1} vCPUs."
-msgstr ""
+msgstr "Solamente soporta {0} de {1} vCPU."
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:91
 #, java-format
 msgid "{2} COVERAGE PROBLEM.  Supports {0} of {1}"
-msgstr ""
+msgstr "{2} PROBLEMA DE CUBRIMIENTO. Soporta {0} de {1}"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author gguerrer
@@ -955,27 +958,27 @@ msgstr "Suscripciones para {0} expirados en: {1}"
 
 #: src/main/java/org/candlepin/policy/js/pooltype/PoolComplianceType.java:50
 msgid "Other"
-msgstr ""
+msgstr "Otro"
 
 #: src/main/java/org/candlepin/policy/js/pooltype/PoolComplianceType.java:53
 msgid "Instance Based"
-msgstr ""
+msgstr "Instancia basada"
 
 #: src/main/java/org/candlepin/policy/js/pooltype/PoolComplianceType.java:56
 msgid "Stackable"
-msgstr ""
+msgstr "Apilable"
 
 #: src/main/java/org/candlepin/policy/js/pooltype/PoolComplianceType.java:59
 msgid "Multi-Entitleable"
-msgstr ""
+msgstr "Multiautorizado"
 
 #: src/main/java/org/candlepin/policy/js/pooltype/PoolComplianceType.java:62
 msgid "Standard"
-msgstr ""
+msgstr "Estándar"
 
 #: src/main/java/org/candlepin/policy/js/pooltype/PoolComplianceType.java:65
 msgid "Stackable only with other subscriptions"
-msgstr ""
+msgstr "Apilable únicamente con otras suscripciones"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -994,7 +997,7 @@ msgstr "Error de tiempo de ejecución {0} en {1}.{2}:{3}"
 #: src/main/java/org/candlepin/exceptions/mappers/BadRequestExceptionMapper.java:57
 #, java-format
 msgid "Invalid format for query parameter {0}. Expected format: {1}"
-msgstr ""
+msgstr "Formato inválido para solicitar parámetro {0}. Formato esperado: {1}"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -1174,8 +1177,8 @@ msgstr "Error en la obtención de llave de unidad oauth"
 #, java-format
 msgid ""
 "Too many content sets for certificate {0}. A newer client may be available "
-"to address this problem. See kbase "
-"https://access.redhat.com/knowledge/node/129003 for more information."
+"to address this problem. See kbase https://access.redhat.com/knowledge/node/"
+"129003 for more information."
 msgstr ""
 "Demasiados conjuntos de contenido para certificado {0}. Un cliente más "
 "reciente puede estar disponible para resolver este problema. Consulte la "
@@ -1198,8 +1201,8 @@ msgstr "No existe el grupo de suscripción {0}."
 #: src/main/java/org/candlepin/controller/Entitler.java:109
 #, java-format
 msgid ""
-"This unit has already had the subscription matching pool ID ''{0}'' "
-"attached."
+"This unit has already had the subscription matching pool ID ''{0}'' attached."
+""
 msgstr ""
 "Esta unidad ya tiene ID de grupo correspondiente a la suscripción ''{0}''."
 
@@ -1246,14 +1249,16 @@ msgid ""
 "Subscription ''{0}'' must be attached using a quantity evenly divisible by "
 "{1}"
 msgstr ""
+"Suscripción ''{0}'' debe estar vinculada mediante una cantidad equivalente "
+"divisible por {1}"
 
 #: src/main/java/org/candlepin/controller/Entitler.java:149
 #, java-format
 msgid ""
 "Unit does not support instance based calculation required by pool ''{0}''"
 msgstr ""
-"La unidad no soporta el cálculo basado en instancia de soporte requerido por"
-" el grupo ''{0}''."
+"La unidad no soporta el cálculo basado en instancia de soporte requerido por "
+"el grupo ''{0}''."
 
 #: src/main/java/org/candlepin/controller/Entitler.java:153
 #, java-format
@@ -1359,6 +1364,8 @@ msgstr "El sistema con UUID {0} es un huésped virtual. No tiene huéspedes."
 #: src/main/java/org/candlepin/model/AbstractHibernateCurator.java:418
 msgid "Request failed due to concurrent modification, please re-try."
 msgstr ""
+"Falló la solicitud debido a una modificación concurrente, por favor intente "
+"de nuevo."
 
 #: src/main/java/org/candlepin/model/UeberCertificateGenerator.java:122
 #, java-format
