--- a/po/fr.po
+++ b/po/fr.po
@@ -1,20 +1,21 @@
 # samfreemanz <sfriedma@redhat.com>, 2012. #zanata
 # jfenal <jfenal@free.fr>, 2013. #zanata
 # samfreemanz <sfriedma@redhat.com>, 2013. #zanata
+# samfreemanz <sfriedma@redhat.com>, 2014. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-06-27 12:35-0400\n"
-"PO-Revision-Date: 2013-11-02 10:39-0400\n"
-"Last-Translator: jfenal <jfenal@free.fr>\n"
+"PO-Revision-Date: 2014-01-19 07:15-0500\n"
+"Last-Translator: samfreemanz <sfriedma@redhat.com>\n"
 "Language-Team: French\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: fr\n"
 "Plural-Forms: nplurals=2; plural=(n > 1)\n"
-"X-Generator: Zanata 3.0.3\n"
+"X-Generator: Zanata 3.2.3\n"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author samfreemanz
@@ -199,22 +200,23 @@ msgstr "{0} a supprimé l'ID d'invité {1}"
 #: src/main/java/org/candlepin/audit/EventAdapterImpl.java:162
 #, java-format
 msgid "{0} updated the rules in the databse to version {1}"
-msgstr ""
+msgstr "{0} a mis à jour les règles dans la base de données à la version {1}"
 
 #: src/main/java/org/candlepin/audit/EventAdapterImpl.java:164
 #, java-format
 msgid "{0} removed the rules from the database"
-msgstr ""
+msgstr "{0} a supprimé les règles de la base de données"
 
 #: src/main/java/org/candlepin/resource/ConsumerContentOverrideResource.java:110
 #, java-format
 msgid "Not allowed to override values for: {0}"
-msgstr ""
+msgstr "Substitution des valeurs interdite pour : {0}"
 
 #: src/main/java/org/candlepin/resource/ConsumerContentOverrideResource.java:190
 #, java-format
 msgid "Name and value of the override must not exceed {0} characters."
 msgstr ""
+"Le nom et la valeur de la substitution ne doit pas excéder {0} caractères."
 
 #: src/main/java/org/candlepin/resource/UserResource.java:141
 #, java-format
@@ -283,7 +285,7 @@ msgstr ""
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:298
 #, java-format
 msgid "Consumer with id {0} could not be found."
-msgstr ""
+msgstr "Le consommateur avec l'ID {0} est introuvable."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author samfreemanz
@@ -475,7 +477,7 @@ msgstr ""
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:1750
 #, java-format
 msgid "A CDN with label {0} does not exist on this system."
-msgstr ""
+msgstr "Un CDN avec l'étiquette {0} n'existe pas sur ce système."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -592,16 +594,18 @@ msgstr "Impossible de trouver le pool avec l'ID {0}."
 #, java-format
 msgid "Guest ID in json \"{0}\" does not match path guest ID \"{1}\""
 msgstr ""
+"L'ID de l'invité dans json « {0} » ne correspond pas au chemin de l'ID de "
+"l'invité « {1} »"
 
 #: src/main/java/org/candlepin/resource/GuestIdResource.java:187
 #, java-format
 msgid "Consumer with uuid {0} could not be found."
-msgstr ""
+msgstr "Le consommateur avec l'UUID {0} est introuvable."
 
 #: src/main/java/org/candlepin/resource/GuestIdResource.java:221
 #, java-format
 msgid "Guest with uuid {0} could not be found."
-msgstr ""
+msgstr "L'invité avec l'UUID {0} est introuvable."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -709,12 +713,12 @@ msgstr ""
 #: src/main/java/org/candlepin/resource/OwnerResource.java:578
 #, java-format
 msgid "{0} is not a valid log level"
-msgstr ""
+msgstr "{0} n’est pas un niveau de journal valide"
 
 #: src/main/java/org/candlepin/resource/OwnerResource.java:657
 #, java-format
 msgid "No such unit type(s): {0}"
-msgstr ""
+msgstr "Aucun tel type d'unité : {0}"
 
 #: src/main/java/org/candlepin/resource/OwnerResource.java:700
 #: src/main/java/org/candlepin/resource/PoolResource.java:142
@@ -856,6 +860,7 @@ msgstr "tâche déjà annulée"
 #: src/main/java/org/candlepin/resource/JobResource.java:200
 msgid "cannot cancel a job that is not in CREATED or WAITING state"
 msgstr ""
+"impossible d'annuler une tâche qui n'est pas dans l'état CREATED ou WAITING"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author samfreemanz
@@ -894,12 +899,12 @@ msgstr "Le type d'unité avec l'ID {0} est introuvable."
 #: src/main/java/org/candlepin/resource/CdnResource.java:93
 #, java-format
 msgid "A CDN with the label {0}already exists"
-msgstr ""
+msgstr "Un CDN avec l'étiquette {0} existe déjà"
 
 #: src/main/java/org/candlepin/resource/CdnResource.java:128
 #, java-format
 msgid "No such content delivery network: {0}"
-msgstr ""
+msgstr "Pas de tel réseau de livraison de contenu : {0}"
 
 #: src/main/java/org/candlepin/resource/DistributorVersionResource.java:104
 #, java-format
@@ -913,42 +918,42 @@ msgstr "Pas de telle version de distributeur : {0}"
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:58
 msgid "Not supported by a valid subscription."
-msgstr ""
+msgstr "Non pris en charge par un abonnement valide."
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:61
 #, java-format
 msgid "Supports architecture {0} but the system is {1}."
-msgstr ""
+msgstr "Prend en charge l'architecture {0} mais le système est {1}."
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:66
 #, java-format
 msgid "Only supports {0} of {1} sockets."
-msgstr ""
+msgstr "Prend en charge {0} sur {1} sockets uniquement."
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:71
 #, java-format
 msgid "Only supports {0} of {1} cores."
-msgstr ""
+msgstr "Prend en charge {0} sur {1} cœurs uniquement."
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:76
 #, java-format
 msgid "Only supports {0}GB of {1}GB of RAM."
-msgstr ""
+msgstr "Prend en charge {0}Go sur {1}Go de RAM uniquement."
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:81
 #, java-format
 msgid "Only supports {0} of {1} virtual guests."
-msgstr ""
+msgstr "Prend en charge {0} sur {1} invités virtuels uniquement."
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:86
 #, java-format
 msgid "Only supports {0} of {1} vCPUs."
-msgstr ""
+msgstr "Prend en charge {0} sur {1} vCPU uniquement."
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:91
 #, java-format
 msgid "{2} COVERAGE PROBLEM.  Supports {0} of {1}"
-msgstr ""
+msgstr "PROBLÈME DE COUVERTURE {2}.  Prend en charge {0} sur {1}"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author samfreemanz
@@ -970,27 +975,27 @@ msgstr "Les abonnements pour {0} expirent le : {1}"
 
 #: src/main/java/org/candlepin/policy/js/pooltype/PoolComplianceType.java:50
 msgid "Other"
-msgstr ""
+msgstr "Autre"
 
 #: src/main/java/org/candlepin/policy/js/pooltype/PoolComplianceType.java:53
 msgid "Instance Based"
-msgstr ""
+msgstr "Basé sur instance"
 
 #: src/main/java/org/candlepin/policy/js/pooltype/PoolComplianceType.java:56
 msgid "Stackable"
-msgstr ""
+msgstr "Empilable"
 
 #: src/main/java/org/candlepin/policy/js/pooltype/PoolComplianceType.java:59
 msgid "Multi-Entitleable"
-msgstr ""
+msgstr "Multiples droits d'accès"
 
 #: src/main/java/org/candlepin/policy/js/pooltype/PoolComplianceType.java:62
 msgid "Standard"
-msgstr ""
+msgstr "Standard"
 
 #: src/main/java/org/candlepin/policy/js/pooltype/PoolComplianceType.java:65
 msgid "Stackable only with other subscriptions"
-msgstr ""
+msgstr "Empilable avec d'autres abonnements uniquement"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -1010,6 +1015,7 @@ msgstr "Erreur d'exécution {0} à {1}.{2}:{3}"
 #, java-format
 msgid "Invalid format for query parameter {0}. Expected format: {1}"
 msgstr ""
+"Format non valide pour le paramètre de la demande {0}. Format attendu : {1}"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author samfreemanz
@@ -1139,8 +1145,8 @@ msgstr ""
 #: src/main/java/org/candlepin/resteasy/interceptor/PageRequestInterceptor.java:120
 msgid "the order parameter must be either 'ascending' or 'descending'"
 msgstr ""
-"le paramètre d'ordre doit être soit « ascending » (ascendant), ou « "
-"descending » (descendant)"
+"le paramètre d'ordre doit être soit « ascending » (ascendant), ou "
+"« descending » (descendant)"
 
 #: src/main/java/org/candlepin/resteasy/interceptor/PageRequestInterceptor.java:129
 msgid "Expected a positive integer."
@@ -1191,13 +1197,12 @@ msgstr "Erreur lors de l'obtention de la clé d'unité OAuth"
 #, java-format
 msgid ""
 "Too many content sets for certificate {0}. A newer client may be available "
-"to address this problem. See kbase "
-"https://access.redhat.com/knowledge/node/129003 for more information."
+"to address this problem. See kbase https://access.redhat.com/knowledge/node/"
+"129003 for more information."
 msgstr ""
 "Trop d'ensembles de contenus pour le certificat {0}. Un client plus récent "
-"peut être disponible pour résoudre ce problème. Voir kbase "
-"https://access.redhat.com/knowledge/node/129003 pour obtenir davantage "
-"d'informations."
+"peut être disponible pour résoudre ce problème. Voir kbase https://access."
+"redhat.com/knowledge/node/129003 pour obtenir davantage d'informations."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author samfreemanz
@@ -1217,8 +1222,8 @@ msgstr "Le pool d'abonnements {0} n'existe pas."
 #: src/main/java/org/candlepin/controller/Entitler.java:109
 #, java-format
 msgid ""
-"This unit has already had the subscription matching pool ID ''{0}'' "
-"attached."
+"This unit has already had the subscription matching pool ID ''{0}'' attached."
+""
 msgstr ""
 "Cette unité possède déjà l'ID de pool correspondant à l'abonnement « {0} » "
 "attaché."
@@ -1232,8 +1237,8 @@ msgstr "Aucun abonnement n'est disponible depuis le pool avec l'ID « {0} »."
 #, java-format
 msgid "Units of this type are not allowed to attach the pool with ID ''{0}''."
 msgstr ""
-"Les unités de ce type n'ont pas le droit d'attacher le pool avec l'ID « {0} "
-"»."
+"Les unités de ce type n'ont pas le droit d'attacher le pool avec l'ID "
+"« {0} »."
 
 #: src/main/java/org/candlepin/controller/Entitler.java:123
 #, java-format
@@ -1268,21 +1273,23 @@ msgid ""
 "Subscription ''{0}'' must be attached using a quantity evenly divisible by "
 "{1}"
 msgstr ""
+"L'abonnement « {0} » doit être attaché à l'aide d'une quantité distribuée "
+"divisible de manière équitable par {1}"
 
 #: src/main/java/org/candlepin/controller/Entitler.java:149
 #, java-format
 msgid ""
 "Unit does not support instance based calculation required by pool ''{0}''"
 msgstr ""
-"L'unité ne prend pas en charge les calculs basés sur instances requis par le"
-" pool « {0} »"
+"L'unité ne prend pas en charge les calculs basés sur instances requis par le "
+"pool « {0} »"
 
 #: src/main/java/org/candlepin/controller/Entitler.java:153
 #, java-format
 msgid "Unit does not support core calculation required by pool ''{0}''"
 msgstr ""
-"L'unité ne prend pas en charge les calculs de cœur requis par le pool « {0} "
-"»"
+"L'unité ne prend pas en charge les calculs de cœur requis par le pool "
+"« {0} »"
 
 #: src/main/java/org/candlepin/controller/Entitler.java:157
 #, java-format
@@ -1331,8 +1338,8 @@ msgstr ""
 msgid ""
 "There are not enough free subscriptions available for the product ''{0}''"
 msgstr ""
-"Il n'y a pas suffisamment d'abonnements gratuits disponibles pour le produit"
-" « {0} »"
+"Il n'y a pas suffisamment d'abonnements gratuits disponibles pour le produit "
+"« {0} »"
 
 #: src/main/java/org/candlepin/controller/Entitler.java:284
 #, java-format
