--- a/po/it.po
+++ b/po/it.po
@@ -1,11 +1,12 @@
 # fvalen <fvalen@fedoraproject.org>, 2012. #zanata
 # fvalen <fvalen@fedoraproject.org>, 2013. #zanata
+# fvalen <fvalen@fedoraproject.org>, 2014. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-06-27 12:35-0400\n"
-"PO-Revision-Date: 2013-09-17 06:33-0400\n"
+"PO-Revision-Date: 2014-01-16 10:11-0500\n"
 "Last-Translator: fvalen <fvalen@fedoraproject.org>\n"
 "Language-Team: Italian\n"
 "MIME-Version: 1.0\n"
@@ -13,7 +14,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: it\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"X-Generator: Zanata 3.0.3\n"
+"X-Generator: Zanata 3.2.3\n"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author fvalen
@@ -198,22 +199,22 @@ msgstr "{0} ha rimosso il guest id {1}"
 #: src/main/java/org/candlepin/audit/EventAdapterImpl.java:162
 #, java-format
 msgid "{0} updated the rules in the databse to version {1}"
-msgstr ""
+msgstr "{0} ha aggiornato le regole nel database alla versione {1}"
 
 #: src/main/java/org/candlepin/audit/EventAdapterImpl.java:164
 #, java-format
 msgid "{0} removed the rules from the database"
-msgstr ""
+msgstr "{0} rimosso le regole dal database"
 
 #: src/main/java/org/candlepin/resource/ConsumerContentOverrideResource.java:110
 #, java-format
 msgid "Not allowed to override values for: {0}"
-msgstr ""
+msgstr "Non è possibile sovrascrivere i valori per: {0}"
 
 #: src/main/java/org/candlepin/resource/ConsumerContentOverrideResource.java:190
 #, java-format
 msgid "Name and value of the override must not exceed {0} characters."
-msgstr ""
+msgstr "Il nome e il valore dell'override non deve superare {0} caratteri."
 
 #: src/main/java/org/candlepin/resource/UserResource.java:141
 #, java-format
@@ -282,7 +283,7 @@ msgstr ""
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:298
 #, java-format
 msgid "Consumer with id {0} could not be found."
-msgstr ""
+msgstr "Impossibile trovare l'utenza con id {0}."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author fvalen
@@ -472,7 +473,7 @@ msgstr ""
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:1750
 #, java-format
 msgid "A CDN with label {0} does not exist on this system."
-msgstr ""
+msgstr "Su questo sistema non esiste alcun CDN con etichetta {0}."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -494,8 +495,8 @@ msgstr "Il sistema con UUID {0} non è un guest virtuale."
 #, java-format
 msgid "Deletion record for hypervisor ''{0}'' not found."
 msgstr ""
-"Impossibile trovare le informazioni sulla rimozione per l'Hypervisor "
-"''{0}''."
+"Impossibile trovare le informazioni sulla rimozione per l'Hypervisor ''{0}''."
+""
 
 #: src/main/java/org/candlepin/resource/EntitlementResource.java:92
 #, java-format
@@ -549,8 +550,8 @@ msgid ""
 "Cannot add pools that are restricted to unit type 'person' to activation "
 "keys."
 msgstr ""
-"Impossibile aggiungere i pool limitati al tipo di unità 'person' alle chiavi"
-" di attivazione."
+"Impossibile aggiungere i pool limitati al tipo di unità 'person' alle chiavi "
+"di attivazione."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author fvalen
@@ -560,8 +561,8 @@ msgid ""
 "to the activation key with a quantity greater than one."
 msgstr ""
 "Errore: Solo i pool con sottoscrizioni al prodotto con entitlement multipli "
-"possono essere aggiunti alla chiave di attivazione con una quantità maggiore"
-" di uno."
+"possono essere aggiunti alla chiave di attivazione con una quantità maggiore "
+"di uno."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author fvalen
@@ -572,8 +573,8 @@ msgstr "La quantità non deve superare quella permessa al pool"
 #: src/main/java/org/candlepin/resource/ActivationKeyResource.java:162
 msgid "Activation keys can only use host restricted pools from a single host."
 msgstr ""
-"Le chiavi di attivazione possono usare solo i pool limitati dagli host di un"
-" host singolo."
+"Le chiavi di attivazione possono usare solo i pool limitati dagli host di un "
+"host singolo."
 
 #: src/main/java/org/candlepin/resource/ActivationKeyResource.java:223
 #, java-format
@@ -589,16 +590,18 @@ msgstr "Impossibile trovare il pool con id {0}."
 #, java-format
 msgid "Guest ID in json \"{0}\" does not match path guest ID \"{1}\""
 msgstr ""
+"L'ID del Guest in json \"{0}\" non corrisponde al percorso dell'ID del guest "
+"\"{1}\""
 
 #: src/main/java/org/candlepin/resource/GuestIdResource.java:187
 #, java-format
 msgid "Consumer with uuid {0} could not be found."
-msgstr ""
+msgstr "Impossibile trovare l'utenza con uuid {0}."
 
 #: src/main/java/org/candlepin/resource/GuestIdResource.java:221
 #, java-format
 msgid "Guest with uuid {0} could not be found."
-msgstr ""
+msgstr "Impossibile trovare il guest con uuid {0}."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -704,12 +707,12 @@ msgstr ""
 #: src/main/java/org/candlepin/resource/OwnerResource.java:578
 #, java-format
 msgid "{0} is not a valid log level"
-msgstr ""
+msgstr "{0} non è un livello di registrazione valido"
 
 #: src/main/java/org/candlepin/resource/OwnerResource.java:657
 #, java-format
 msgid "No such unit type(s): {0}"
-msgstr ""
+msgstr "Tipo di unità non trovata: {0}"
 
 #: src/main/java/org/candlepin/resource/OwnerResource.java:700
 #: src/main/java/org/candlepin/resource/PoolResource.java:142
@@ -748,8 +751,8 @@ msgstr "Errore nella lettura dell'archivio di esportazione"
 #, java-format
 msgid "Problem generating ueber cert for owner {0}"
 msgstr ""
-"Problemi durante la generazione di un euber cert (certificato master) per il"
-" proprietario {0}"
+"Problemi durante la generazione di un euber cert (certificato master) per il "
+"proprietario {0}"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author fvalen
@@ -851,6 +854,8 @@ msgstr "lavoro già cancellato"
 #: src/main/java/org/candlepin/resource/JobResource.java:200
 msgid "cannot cancel a job that is not in CREATED or WAITING state"
 msgstr ""
+"impossibile cancellare un lavoro che non presenta uno stato CREATED o "
+"WAITING"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author fvalen
@@ -889,12 +894,12 @@ msgstr "Impossibile trovare il tipo di unità con id {0}."
 #: src/main/java/org/candlepin/resource/CdnResource.java:93
 #, java-format
 msgid "A CDN with the label {0}already exists"
-msgstr ""
+msgstr "Un CDN con etichetta {0} è già esistente"
 
 #: src/main/java/org/candlepin/resource/CdnResource.java:128
 #, java-format
 msgid "No such content delivery network: {0}"
-msgstr ""
+msgstr "Rete per la distribuzione dei contenuti non trovata: {0}"
 
 #: src/main/java/org/candlepin/resource/DistributorVersionResource.java:104
 #, java-format
@@ -908,42 +913,42 @@ msgstr "Versione distributore non trovata: {0}"
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:58
 msgid "Not supported by a valid subscription."
-msgstr ""
+msgstr "Non supportata da una sottoscrizione valida."
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:61
 #, java-format
 msgid "Supports architecture {0} but the system is {1}."
-msgstr ""
+msgstr "Supporta l'architettura {0} ma il sistema è {1}."
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:66
 #, java-format
 msgid "Only supports {0} of {1} sockets."
-msgstr ""
+msgstr "Supporta solo {0} di {1} socket."
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:71
 #, java-format
 msgid "Only supports {0} of {1} cores."
-msgstr ""
+msgstr "Supporta solo {0} di {1} core."
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:76
 #, java-format
 msgid "Only supports {0}GB of {1}GB of RAM."
-msgstr ""
+msgstr "Supporta solo {0}GB di {1}GB di RAM."
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:81
 #, java-format
 msgid "Only supports {0} of {1} virtual guests."
-msgstr ""
+msgstr "Supporta solo {0} di {1} guest virtuali."
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:86
 #, java-format
 msgid "Only supports {0} of {1} vCPUs."
-msgstr ""
+msgstr "Supporta solo {0} di {1} vCPU."
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:91
 #, java-format
 msgid "{2} COVERAGE PROBLEM.  Supports {0} of {1}"
-msgstr ""
+msgstr "{2} COVERAGE PROBLEM.  Supporta {0} di {1}"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author fvalen
@@ -965,27 +970,27 @@ msgstr "Le sottoscrizioni per {0} sono scadute il: {1}"
 
 #: src/main/java/org/candlepin/policy/js/pooltype/PoolComplianceType.java:50
 msgid "Other"
-msgstr ""
+msgstr "Altro"
 
 #: src/main/java/org/candlepin/policy/js/pooltype/PoolComplianceType.java:53
 msgid "Instance Based"
-msgstr ""
+msgstr "Basato sull'istanza"
 
 #: src/main/java/org/candlepin/policy/js/pooltype/PoolComplianceType.java:56
 msgid "Stackable"
-msgstr ""
+msgstr "Implementabile"
 
 #: src/main/java/org/candlepin/policy/js/pooltype/PoolComplianceType.java:59
 msgid "Multi-Entitleable"
-msgstr ""
+msgstr "Con entitlement multipli"
 
 #: src/main/java/org/candlepin/policy/js/pooltype/PoolComplianceType.java:62
 msgid "Standard"
-msgstr ""
+msgstr "Standard"
 
 #: src/main/java/org/candlepin/policy/js/pooltype/PoolComplianceType.java:65
 msgid "Stackable only with other subscriptions"
-msgstr ""
+msgstr "Implementabile solo con altre sottoscrizioni"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -1005,6 +1010,8 @@ msgstr "Errore di runtime {0} in {1}.{2}:{3}"
 #, java-format
 msgid "Invalid format for query parameter {0}. Expected format: {1}"
 msgstr ""
+"Formato non valido per il parametro dell'interrogazione{0}. Formato previsto:"
+" {1}"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -1182,8 +1189,8 @@ msgstr "Errore durante l'acquisizione della chiave unità oauth"
 #, java-format
 msgid ""
 "Too many content sets for certificate {0}. A newer client may be available "
-"to address this problem. See kbase "
-"https://access.redhat.com/knowledge/node/129003 for more information."
+"to address this problem. See kbase https://access.redhat.com/knowledge/node/"
+"129003 for more information."
 msgstr ""
 "Troppi set del contenuto per il certificato {0}. Per risolvere questo "
 "problema può essere disponibile un nuovo client. Per maggiori informazioni "
@@ -1205,8 +1212,8 @@ msgstr "Il pool di sottoscrizione {0} non esiste."
 #: src/main/java/org/candlepin/controller/Entitler.java:109
 #, java-format
 msgid ""
-"This unit has already had the subscription matching pool ID ''{0}'' "
-"attached."
+"This unit has already had the subscription matching pool ID ''{0}'' attached."
+""
 msgstr ""
 "È già stato assegnato a questa unità il  pool ID ''{0}'' della "
 "sottoscrizione corrispondente."
@@ -1253,6 +1260,8 @@ msgid ""
 "Subscription ''{0}'' must be attached using a quantity evenly divisible by "
 "{1}"
 msgstr ""
+"La sottoscrizione ''{0}'' deve essere assegnata usando una quantità "
+"equamente divisibile per {1}"
 
 #: src/main/java/org/candlepin/controller/Entitler.java:149
 #, java-format
@@ -1360,8 +1369,8 @@ msgstr "L'attributo ''{0}'' deve essere un valore booleano."
 msgid ""
 "You cannot create a circular reference for products that ''{0}'' relies on."
 msgstr ""
-"Non è possibile creare un riferimento circolare con i prodotti utilizzati da"
-" ''{0}''"
+"Non è possibile creare un riferimento circolare con i prodotti utilizzati da "
+"''{0}''"
 
 #: src/main/java/org/candlepin/model/ConsumerCurator.java:103
 #, java-format
@@ -1376,7 +1385,7 @@ msgstr ""
 
 #: src/main/java/org/candlepin/model/AbstractHibernateCurator.java:418
 msgid "Request failed due to concurrent modification, please re-try."
-msgstr ""
+msgstr "Richiesta fallita a causa di una modifica simultanea, riprovare."
 
 #: src/main/java/org/candlepin/model/UeberCertificateGenerator.java:122
 #, java-format
