--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1,20 +1,21 @@
 # gcintra <gcintra@fedoraproject.org>, 2012. #zanata
 # ldelima <ldelima@redhat.com>, 2012. #zanata
 # gcintra <gcintra@fedoraproject.org>, 2013. #zanata
+# ldelima <ldelima@redhat.com>, 2014. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-06-27 12:35-0400\n"
-"PO-Revision-Date: 2013-09-18 09:04-0400\n"
-"Last-Translator: gcintra <gcintra@fedoraproject.org>\n"
+"PO-Revision-Date: 2014-01-22 03:20-0500\n"
+"Last-Translator: ldelima <ldelima@redhat.com>\n"
 "Language-Team: Portuguese (Brazil)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: pt-BR\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"X-Generator: Zanata 3.0.3\n"
+"X-Generator: Zanata 3.2.3\n"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -199,22 +200,22 @@ msgstr "{0} removeu o id do convidado {1}"
 #: src/main/java/org/candlepin/audit/EventAdapterImpl.java:162
 #, java-format
 msgid "{0} updated the rules in the databse to version {1}"
-msgstr ""
+msgstr "{0} atualizou as regras na fonte de dados para versão {1}"
 
 #: src/main/java/org/candlepin/audit/EventAdapterImpl.java:164
 #, java-format
 msgid "{0} removed the rules from the database"
-msgstr ""
+msgstr "{0} removeu as regras da fonte de dados"
 
 #: src/main/java/org/candlepin/resource/ConsumerContentOverrideResource.java:110
 #, java-format
 msgid "Not allowed to override values for: {0}"
-msgstr ""
+msgstr "Não é permitido para substituir valores para: {0}"
 
 #: src/main/java/org/candlepin/resource/ConsumerContentOverrideResource.java:190
 #, java-format
 msgid "Name and value of the override must not exceed {0} characters."
-msgstr ""
+msgstr "Nome e valor não devem substituir {0} caracteres."
 
 #: src/main/java/org/candlepin/resource/UserResource.java:141
 #, java-format
@@ -283,7 +284,7 @@ msgstr ""
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:298
 #, java-format
 msgid "Consumer with id {0} could not be found."
-msgstr ""
+msgstr "O cliente com a id {0} não pode ser encontrado."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author rgyorfy
@@ -461,13 +462,13 @@ msgid ""
 "Unit {0} cannot be exported. A manifest cannot be made for units of type "
 "''{1}''."
 msgstr ""
-"Unidade {0}não pôde ser exportado. Um manifesto não pode ser gerado para "
+"Unidade {0} não pôde ser exportado. Um manifesto não pode ser gerado para "
 "unidades do tipo ''{1}''."
 
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:1750
 #, java-format
 msgid "A CDN with label {0} does not exist on this system."
-msgstr ""
+msgstr "Não há nenhum CDN com rótulo {0} no sistema."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -552,8 +553,8 @@ msgid ""
 "Error: Only pools with multi-entitlement product subscriptions can be added "
 "to the activation key with a quantity greater than one."
 msgstr ""
-"Erro: Somente conjuntos com subscrições de produtos multi-direitos podem ser"
-" adicionadas à chave de ativação com uma quantidade maior que um."
+"Erro: Somente conjuntos com subscrições de produtos multi-direitos podem ser "
+"adicionadas à chave de ativação com uma quantidade maior que um."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author rgyorfy
@@ -581,16 +582,18 @@ msgstr "Pool com id {0} não foram encontrados."
 #, java-format
 msgid "Guest ID in json \"{0}\" does not match path guest ID \"{1}\""
 msgstr ""
+"A ID do convidado com json \"{0}\" não coincide com a ID do convidado de "
+"caminho \"{1}\""
 
 #: src/main/java/org/candlepin/resource/GuestIdResource.java:187
 #, java-format
 msgid "Consumer with uuid {0} could not be found."
-msgstr ""
+msgstr "O cliente com o uuid {0} não pôde ser encontrado."
 
 #: src/main/java/org/candlepin/resource/GuestIdResource.java:221
 #, java-format
 msgid "Guest with uuid {0} could not be found."
-msgstr ""
+msgstr "O convidado com uuid {0} não pôde ser encontrado."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -635,7 +638,7 @@ msgstr "e-mail é requerido para notificação"
 # keys, author rgyorfy
 #: src/main/java/org/candlepin/resource/SubscriptionResource.java:148
 msgid "email locale is required for notification"
-msgstr "localiade do e-mail é requerido para notificação"
+msgstr "localidade do e-mail é requerido para notificação"
 
 #: src/main/java/org/candlepin/resource/SubscriptionResource.java:154
 #: src/main/java/org/candlepin/resource/OwnerResource.java:821
@@ -694,12 +697,12 @@ msgstr ""
 #: src/main/java/org/candlepin/resource/OwnerResource.java:578
 #, java-format
 msgid "{0} is not a valid log level"
-msgstr ""
+msgstr "{0} não é um nível de log válido"
 
 #: src/main/java/org/candlepin/resource/OwnerResource.java:657
 #, java-format
 msgid "No such unit type(s): {0}"
-msgstr ""
+msgstr "Não foi possível encontrar o(s) tipo(s) de unidade: {0}"
 
 #: src/main/java/org/candlepin/resource/OwnerResource.java:700
 #: src/main/java/org/candlepin/resource/PoolResource.java:142
@@ -839,6 +842,8 @@ msgstr "trabalho já cancelado"
 #: src/main/java/org/candlepin/resource/JobResource.java:200
 msgid "cannot cancel a job that is not in CREATED or WAITING state"
 msgstr ""
+"não foi possível cancelar um trabalho que não está no estado CRIADO ou DE "
+"ESPERA"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author gcintra
@@ -877,12 +882,12 @@ msgstr "Tipo de unidade com id {0} não foi encontrado."
 #: src/main/java/org/candlepin/resource/CdnResource.java:93
 #, java-format
 msgid "A CDN with the label {0}already exists"
-msgstr ""
+msgstr "Um CND com o rótulo {0}já existe"
 
 #: src/main/java/org/candlepin/resource/CdnResource.java:128
 #, java-format
 msgid "No such content delivery network: {0}"
-msgstr ""
+msgstr "Nenhuma rede de entrega do conteúdo: {0}"
 
 #: src/main/java/org/candlepin/resource/DistributorVersionResource.java:104
 #, java-format
@@ -896,42 +901,42 @@ msgstr "Nenhuma versão de distribuidor: {0}"
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:58
 msgid "Not supported by a valid subscription."
-msgstr ""
+msgstr "Não é suportado por uma subscrição válida."
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:61
 #, java-format
 msgid "Supports architecture {0} but the system is {1}."
-msgstr ""
+msgstr "Suporta a arquitetura {0} mas o sistema é {1}."
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:66
 #, java-format
 msgid "Only supports {0} of {1} sockets."
-msgstr ""
+msgstr "Apenas suporta {0} de {1} sockets."
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:71
 #, java-format
 msgid "Only supports {0} of {1} cores."
-msgstr ""
+msgstr "Apenas suporta {0} de {1} cores."
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:76
 #, java-format
 msgid "Only supports {0}GB of {1}GB of RAM."
-msgstr ""
+msgstr "Apenas suporta {0}GB de {1}GB de RAM."
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:81
 #, java-format
 msgid "Only supports {0} of {1} virtual guests."
-msgstr ""
+msgstr "Apenas suporta {0} de {1} convidados virtuais."
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:86
 #, java-format
 msgid "Only supports {0} of {1} vCPUs."
-msgstr ""
+msgstr "Apenas suporta {0} de {1} vCPUs."
 
 #: src/main/java/org/candlepin/policy/js/compliance/StatusReasonMessageGenerator.java:91
 #, java-format
 msgid "{2} COVERAGE PROBLEM.  Supports {0} of {1}"
-msgstr ""
+msgstr "{2} PROBLEMA DE COBERTURA. Suporta {0} de {1}"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author rgyorfy
@@ -953,27 +958,27 @@ msgstr "Subscrições {0} venceram no: {1}"
 
 #: src/main/java/org/candlepin/policy/js/pooltype/PoolComplianceType.java:50
 msgid "Other"
-msgstr ""
+msgstr "Outro"
 
 #: src/main/java/org/candlepin/policy/js/pooltype/PoolComplianceType.java:53
 msgid "Instance Based"
-msgstr ""
+msgstr "Baseado na Instância"
 
 #: src/main/java/org/candlepin/policy/js/pooltype/PoolComplianceType.java:56
 msgid "Stackable"
-msgstr ""
+msgstr "Empilhável"
 
 #: src/main/java/org/candlepin/policy/js/pooltype/PoolComplianceType.java:59
 msgid "Multi-Entitleable"
-msgstr ""
+msgstr "Permissão Múltipla"
 
 #: src/main/java/org/candlepin/policy/js/pooltype/PoolComplianceType.java:62
 msgid "Standard"
-msgstr ""
+msgstr "Padrão"
 
 #: src/main/java/org/candlepin/policy/js/pooltype/PoolComplianceType.java:65
 msgid "Stackable only with other subscriptions"
-msgstr ""
+msgstr "Empilhável com outras subscrições"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -993,6 +998,7 @@ msgstr "Erro de execução {0} no {1}.{2}:{3}"
 #, java-format
 msgid "Invalid format for query parameter {0}. Expected format: {1}"
 msgstr ""
+"Formato inválido para o parâmetro de consulta {0}. Formato esperado: {1}"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -1171,12 +1177,12 @@ msgstr "Erro ao obter a chave de unidade do oauth"
 #, java-format
 msgid ""
 "Too many content sets for certificate {0}. A newer client may be available "
-"to address this problem. See kbase "
-"https://access.redhat.com/knowledge/node/129003 for more information."
+"to address this problem. See kbase https://access.redhat.com/knowledge/node/"
+"129003 for more information."
 msgstr ""
 "Muitos conjuntos de conteúdo para o certificado {0}. Um cliente mais novo "
-"pode estar disponível para solucionar este problema. Veja kbase "
-"https://access.redhat.com/knowledge/node/129003 para obter mais informações."
+"pode estar disponível para solucionar este problema. Veja kbase https://"
+"access.redhat.com/knowledge/node/129003 para obter mais informações."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author rgyorfy
@@ -1194,8 +1200,8 @@ msgstr "Conjunto de subscrição {0} não existe"
 #: src/main/java/org/candlepin/controller/Entitler.java:109
 #, java-format
 msgid ""
-"This unit has already had the subscription matching pool ID ''{0}'' "
-"attached."
+"This unit has already had the subscription matching pool ID ''{0}'' attached."
+""
 msgstr ""
 "Esta unidade já  teve sua ID de pool coincidente de subscrição ''{0}'' "
 "anexada."
@@ -1226,8 +1232,8 @@ msgstr "A máquina do convidado não coincide o proprietário da pool: ''{0}''."
 #: src/main/java/org/candlepin/controller/Entitler.java:131
 msgid "Pool not available to subscription management applications."
 msgstr ""
-"O pool não está disponível para as aplicações de gerenciamento de "
-"subscrição."
+"O pool não está disponível para as aplicações de gerenciamento de subscrição."
+""
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -1242,6 +1248,8 @@ msgid ""
 "Subscription ''{0}'' must be attached using a quantity evenly divisible by "
 "{1}"
 msgstr ""
+"A subscrição ''{0}''deve ser anexada usando uma quantidade igualmente "
+"dividida por {1}"
 
 #: src/main/java/org/candlepin/controller/Entitler.java:149
 #, java-format
@@ -1271,8 +1279,8 @@ msgstr "Incapaz de anexar a pool com o ID ''{0}''.: {1}."
 msgid ""
 "Insufficient pool quantity available for adjustment to entitlement ''{0}''."
 msgstr ""
-"Quantidade de Pool insuficiente disponível para acertos aos serviços "
-"''{0}''."
+"Quantidade de Pool insuficiente disponível para acertos aos serviços ''{0}''."
+""
 
 #: src/main/java/org/candlepin/controller/Entitler.java:187
 #: src/main/java/org/candlepin/controller/Entitler.java:192
@@ -1362,6 +1370,8 @@ msgstr ""
 #: src/main/java/org/candlepin/model/AbstractHibernateCurator.java:418
 msgid "Request failed due to concurrent modification, please re-try."
 msgstr ""
+"Falha na solicitação devido à modificação simultânea, por favor tente "
+"novamente."
 
 #: src/main/java/org/candlepin/model/UeberCertificateGenerator.java:122
 #, java-format
