--- a/po/de_DE.po
+++ b/po/de_DE.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-05-01 15:52-0300\n"
+"POT-Creation-Date: 2012-06-27 12:35-0400\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
 "PO-Revision-Date: 2014-02-27 06:20-0500\n"
 "Last-Translator: hedda <hedda@fedoraproject.org>\n"
 "Language-Team: German (Germany)\n"
 "Language: de-DE\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "X-Generator: Zanata 3.3.2\n"
 
@@ -546,7 +546,8 @@ msgstr "Inhalt mit ID {0} konnte nicht gefunden werden."
 # keys
 #: src/main/java/org/candlepin/resource/RulesResource.java:90
 msgid "Error decoding the rules. The text should be base 64 encoded"
-msgstr "Fehler beim Dekodieren der Regeln. Der Text sollte base64-kodiert sein"
+msgstr ""
+"Fehler beim Dekodieren der Regeln. Der Text sollte base64-kodiert sein"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -624,14 +625,15 @@ msgid ""
 "The activation key name ''{0}'' must be alphanumeric or include the "
 "characters '-' or '_'"
 msgstr ""
-"Der Aktivierungsschlüsselname ''{0}''darf nur alphanumerische Zeichen oder "
-"'-' oder '_' enthalten"
+"Der Aktivierungsschlüsselname ''{0}''darf nur alphanumerische Zeichen oder '-"
+"' oder '_' enthalten"
 
 #: src/main/java/org/candlepin/resource/OwnerResource.java:537
 #, java-format
 msgid "The activation key name ''{0}'' is already in use for owner {1}"
 msgstr ""
-"Der Aktivierungsschlüsselname ''{0}'' wird bereits für Besitzer {1} verwendet"
+"Der Aktivierungsschlüsselname ''{0}'' wird bereits für Besitzer {1} "
+"verwendet"
 
 #: src/main/java/org/candlepin/resource/OwnerResource.java:621
 #, java-format
@@ -984,12 +986,14 @@ msgstr ""
 
 #: src/main/java/org/candlepin/policy/js/activationkey/ActivationKeyRules.java:116
 #, java-format
-msgid "Cannot add virtual pool ''{0}'' to activation key for physical systems."
+msgid ""
+"Cannot add virtual pool ''{0}'' to activation key for physical systems."
 msgstr ""
 
 #: src/main/java/org/candlepin/policy/js/activationkey/ActivationKeyRules.java:120
 #, java-format
-msgid "Cannot add physical pool ''{0}'' to activation key for virtual systems."
+msgid ""
+"Cannot add physical pool ''{0}'' to activation key for virtual systems."
 msgstr ""
 
 #: src/main/java/org/candlepin/util/ServiceLevelValidator.java:67
@@ -997,6 +1001,7 @@ msgstr ""
 msgid "Service level ''{0}'' is not available to units of organization {1}."
 msgstr ""
 "Service-Level \"{0}\" ist nicht für Einheiten der Organisation {1} verfügbar."
+""
 
 #: src/main/java/org/candlepin/util/ContentOverrideValidator.java:58
 #, java-format
@@ -1155,7 +1160,8 @@ msgstr ""
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:51
 msgid ""
-"numeric value out of bounds (<{integer} digits>.<{fraction} digits> expected)"
+"numeric value out of bounds (<{integer} digits>.<{fraction} digits> "
+"expected)"
 msgstr ""
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:55
@@ -1285,12 +1291,12 @@ msgstr "Fehler beim Abrufen des oauth-Einheitenschlüssels"
 #, java-format
 msgid ""
 "Too many content sets for certificate {0}. A newer client may be available "
-"to address this problem. See kbase https://access.redhat.com/knowledge/"
-"node/129003 for more information."
+"to address this problem. See kbase https://access.redhat.com/knowledge/node/"
+"129003 for more information."
 msgstr ""
 "Zu viele Inhaltssets für Zertifikat {0}. Möglicherweise ist ein neuerer "
-"Client verfügbar, der dieses Problem beseitigt. Siehe Wissensdatenbank "
-"https://access.redhat.com/knowledge/node/129003 für weitere Informationen."
+"Client verfügbar, der dieses Problem beseitigt. Siehe Wissensdatenbank https:"
+"//access.redhat.com/knowledge/node/129003 für weitere Informationen."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author hedda
@@ -1298,6 +1304,7 @@ msgstr ""
 msgid "Standalone candlepin does not support redeeming a subscription."
 msgstr ""
 "Standalone-Candlepin unterstützt nicht das Zurückerlangen von Subskriptionen."
+""
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author hedda
@@ -1310,6 +1317,7 @@ msgstr "Subskriptionspool {0} existiert nicht."
 #, java-format
 msgid ""
 "This unit has already had the subscription matching pool ID ''{0}'' attached."
+""
 msgstr ""
 "Mit dieser Einheit wurde bereits die zur Subskription passende Pool ID "
 "''{0}'' verknüpft."
@@ -1417,8 +1425,8 @@ msgstr ""
 #, java-format
 msgid "Unable to adjust quantity for the entitlement with id ''{0}'': {1}"
 msgstr ""
-"Anzahl konnte für die Berechtigung mit der ID ''{0}'' nicht angepasst "
-"werden: {1}"
+"Anzahl konnte für die Berechtigung mit der ID ''{0}'' nicht angepasst werden:"
+" {1}"
 
 #: src/main/java/org/candlepin/controller/Entitler.java:284
 #, java-format
@@ -1437,7 +1445,8 @@ msgstr "Es gibt nicht genügend freie Subskriptionen für das Produkt ''{0}''"
 #: src/main/java/org/candlepin/controller/Entitler.java:292
 #, java-format
 msgid "Units of this type are not allowed for the product ''{0}''."
-msgstr "Einheiten von diesem Typ sind nicht für das Produkt ''{0}'' zugelassen"
+msgstr ""
+"Einheiten von diesem Typ sind nicht für das Produkt ''{0}'' zugelassen"
 
 #: src/main/java/org/candlepin/controller/Entitler.java:297
 #, java-format
@@ -1504,15 +1513,3 @@ msgstr "Keine solchen Einheitentypen: {0}"
 #, java-format
 msgid "No such unit type: {0}"
 msgstr "Kein solcher Einheitentyp: {0}"
-
-#~ msgid "Name of the unit must be shorter than {0} characters."
-#~ msgstr "Name der Einheit sollte kürzer als {0} Zeichen sein."
-
-#~ msgid "System name cannot be null."
-#~ msgstr "Systemname kann nicht Null sein."
-
-#~ msgid ""
-#~ "Name, value, and label of the override must not exceed {0} characters."
-#~ msgstr ""
-#~ "Name, Wert und Label der Überschreibung darf nicht mehr als {0} Zeichen "
-#~ "lang sein"
