--- a/po/es_ES.po
+++ b/po/es_ES.po
@@ -1,20 +1,21 @@
 # angelagarcia <agarcia@redhat.com>, 2012. #zanata
 # gguerrer <gguerrer@fedoraproject.org>, 2012. #zanata
-# Gladys Guerrero Lozano <gladysguerrerolozano419@gmail.com>, 2013. #zanata
+# Gladys Guerrero Lozano <gladysguerrerolozano419@gmail.com.disabled>, 2013. #zanata
 # gguerrer <gguerrer@fedoraproject.org>, 2013. #zanata
-# Gladys Guerrero Lozano <gladysguerrerolozano419@gmail.com>, 2014. #zanata
+# Gladys Guerrero Lozano <gladysguerrerolozano419@gmail.com.disabled>, 2014. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-05-01 15:52-0300\n"
-"PO-Revision-Date: 2014-02-26 01:01-0500\n"
-"Last-Translator: Gladys Guerrero Lozano <gladysguerrerolozano419@gmail.com>\n"
-"Language-Team: Spanish (Spain)\n"
-"Language: es-ES\n"
+"POT-Creation-Date: 2012-06-27 12:35-0400\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"PO-Revision-Date: 2014-02-26 01:00-0500\n"
+"Last-Translator: Gladys Guerrero Lozano <gladysguerrerolozano419@gmail.com."
+"disabled>\n"
+"Language-Team: Spanish (Spain)\n"
+"Language: es-ES\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "X-Generator: Zanata 3.3.2\n"
 
@@ -976,12 +977,14 @@ msgstr ""
 
 #: src/main/java/org/candlepin/policy/js/activationkey/ActivationKeyRules.java:116
 #, java-format
-msgid "Cannot add virtual pool ''{0}'' to activation key for physical systems."
+msgid ""
+"Cannot add virtual pool ''{0}'' to activation key for physical systems."
 msgstr ""
 
 #: src/main/java/org/candlepin/policy/js/activationkey/ActivationKeyRules.java:120
 #, java-format
-msgid "Cannot add physical pool ''{0}'' to activation key for virtual systems."
+msgid ""
+"Cannot add physical pool ''{0}'' to activation key for virtual systems."
 msgstr ""
 
 #: src/main/java/org/candlepin/util/ServiceLevelValidator.java:67
@@ -1151,7 +1154,8 @@ msgstr ""
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:51
 msgid ""
-"numeric value out of bounds (<{integer} digits>.<{fraction} digits> expected)"
+"numeric value out of bounds (<{integer} digits>.<{fraction} digits> "
+"expected)"
 msgstr ""
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:55
@@ -1279,8 +1283,8 @@ msgstr "Error en la obtención de llave de unidad oauth"
 #, java-format
 msgid ""
 "Too many content sets for certificate {0}. A newer client may be available "
-"to address this problem. See kbase https://access.redhat.com/knowledge/"
-"node/129003 for more information."
+"to address this problem. See kbase https://access.redhat.com/knowledge/node/"
+"129003 for more information."
 msgstr ""
 "Demasiados conjuntos de contenido para certificado {0}. Un cliente más "
 "reciente puede estar disponible para resolver este problema. Consulte la "
@@ -1304,6 +1308,7 @@ msgstr "No existe el grupo de suscripción {0}."
 #, java-format
 msgid ""
 "This unit has already had the subscription matching pool ID ''{0}'' attached."
+""
 msgstr ""
 "Esta unidad ya tiene ID de grupo correspondiente a la suscripción ''{0}''."
 
@@ -1427,7 +1432,8 @@ msgstr "Las unidades de este tipo no tienen permiso para el producto ''{0}''"
 #: src/main/java/org/candlepin/controller/Entitler.java:297
 #, java-format
 msgid "Only virtual systems can have subscription ''{0}'' attached."
-msgstr "Solamente sistemas virtuales pueden tener ''{0}'' suscripción adjunta."
+msgstr ""
+"Solamente sistemas virtuales pueden tener ''{0}'' suscripción adjunta."
 
 #: src/main/java/org/candlepin/controller/Entitler.java:302
 #, java-format
@@ -1487,15 +1493,3 @@ msgstr "No existe dicho tipo de unidad: {0}"
 #, java-format
 msgid "No such unit type: {0}"
 msgstr "No existe dicho tipo de unidad: {0}"
-
-#~ msgid "Name of the unit must be shorter than {0} characters."
-#~ msgstr "Nombre de la unidad debe ser de menos de {0} caracteres."
-
-#~ msgid "System name cannot be null."
-#~ msgstr "Nombre de sistema no puede ser cero."
-
-#~ msgid ""
-#~ "Name, value, and label of the override must not exceed {0} characters."
-#~ msgstr ""
-#~ "Nombre, valor y etiqueta de sobrescritos no deben exceder de {0} "
-#~ "caracteres."
