--- a/po/fr.po
+++ b/po/fr.po
@@ -6,14 +6,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-05-01 15:52-0300\n"
+"POT-Creation-Date: 2012-06-27 12:35-0400\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
 "PO-Revision-Date: 2014-02-26 12:02-0500\n"
 "Last-Translator: samfreemanz <sfriedma@redhat.com>\n"
 "Language-Team: French\n"
 "Language: fr\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1)\n"
 "X-Generator: Zanata 3.3.2\n"
 
@@ -352,7 +352,8 @@ msgstr ""
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:719
 #, java-format
 msgid "User ''{0}'' has already registered a personal consumer"
-msgstr "L'utilisateur « {0} » est déjà enregistré comme consommateur personnel"
+msgstr ""
+"L'utilisateur « {0} » est déjà enregistré comme consommateur personnel"
 
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:736
 msgid "You must specify an organization for new units."
@@ -549,7 +550,8 @@ msgstr "Impossible de trouver le contenu avec l'ID {0}."
 #: src/main/java/org/candlepin/resource/RulesResource.java:90
 msgid "Error decoding the rules. The text should be base 64 encoded"
 msgstr ""
-"Erreur lors du décodage des règles. Le texte devrait être encodé avec base 64"
+"Erreur lors du décodage des règles. Le texte devrait être encodé avec base "
+"64"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -608,7 +610,8 @@ msgstr "Impossible de trouver l'événement avec l'ID « {0} »."
 #: src/main/java/org/candlepin/resource/OwnerResource.java:291
 #, java-format
 msgid "Could not create the Owner: {0}. Parent {1} does not exist."
-msgstr "Impossible de créer le propriétaire : {0}. Le parent {1} n'existe pas."
+msgstr ""
+"Impossible de créer le propriétaire : {0}. Le parent {1} n'existe pas."
 
 #: src/main/java/org/candlepin/resource/OwnerResource.java:304
 #, java-format
@@ -660,7 +663,8 @@ msgstr "L'utilisateur {0} ne peut pas accéder au consommateur {1}"
 #: src/main/java/org/candlepin/model/activationkeys/ActivationKeyCurator.java:58
 #, java-format
 msgid "ActivationKey with id {0} could not be found."
-msgstr "Impossible de trouver la clé d'activation ActivationKey avec l'ID {0}."
+msgstr ""
+"Impossible de trouver la clé d'activation ActivationKey avec l'ID {0}."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author samfreemanz
@@ -970,7 +974,8 @@ msgstr ""
 # keys, author samfreemanz
 #: src/main/java/org/candlepin/policy/js/activationkey/ActivationKeyRules.java:101
 msgid "The quantity must not be greater than the total allowed for the pool"
-msgstr "La quantité ne doit pas être supérieure au total autorisé pour le pool"
+msgstr ""
+"La quantité ne doit pas être supérieure au total autorisé pour le pool"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author samfreemanz
@@ -987,12 +992,14 @@ msgstr ""
 
 #: src/main/java/org/candlepin/policy/js/activationkey/ActivationKeyRules.java:116
 #, java-format
-msgid "Cannot add virtual pool ''{0}'' to activation key for physical systems."
+msgid ""
+"Cannot add virtual pool ''{0}'' to activation key for physical systems."
 msgstr ""
 
 #: src/main/java/org/candlepin/policy/js/activationkey/ActivationKeyRules.java:120
 #, java-format
-msgid "Cannot add physical pool ''{0}'' to activation key for virtual systems."
+msgid ""
+"Cannot add physical pool ''{0}'' to activation key for virtual systems."
 msgstr ""
 
 #: src/main/java/org/candlepin/util/ServiceLevelValidator.java:67
@@ -1112,7 +1119,8 @@ msgstr "L'archive ne contient pas le répertoire des droits d'accès requis"
 #, java-format
 msgid "The archive {0} is not a properly compressed file or is empty"
 msgstr ""
-"L'archive {0} est un fichier qui n'est pas compressé correctement ou est vide"
+"L'archive {0} est un fichier qui n'est pas compressé correctement ou est "
+"vide"
 
 #: src/main/java/org/candlepin/sync/ConsumerImporter.java:62
 msgid "No ID for upstream subscription management application."
@@ -1161,7 +1169,8 @@ msgstr ""
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:51
 msgid ""
-"numeric value out of bounds (<{integer} digits>.<{fraction} digits> expected)"
+"numeric value out of bounds (<{integer} digits>.<{fraction} digits> "
+"expected)"
 msgstr ""
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:55
@@ -1292,8 +1301,8 @@ msgstr "Erreur lors de l'obtention de la clé d'unité OAuth"
 #, java-format
 msgid ""
 "Too many content sets for certificate {0}. A newer client may be available "
-"to address this problem. See kbase https://access.redhat.com/knowledge/"
-"node/129003 for more information."
+"to address this problem. See kbase https://access.redhat.com/knowledge/node/"
+"129003 for more information."
 msgstr ""
 "Trop d'ensembles de contenus pour le certificat {0}. Un client plus récent "
 "peut être disponible pour résoudre ce problème. Voir kbase https://access."
@@ -1318,6 +1327,7 @@ msgstr "Le pool d'abonnements {0} n'existe pas."
 #, java-format
 msgid ""
 "This unit has already had the subscription matching pool ID ''{0}'' attached."
+""
 msgstr ""
 "Cette unité possède déjà l'ID de pool correspondant à l'abonnement « {0} » "
 "attaché."
@@ -1387,7 +1397,8 @@ msgstr ""
 #, java-format
 msgid "Unit does not support core calculation required by pool ''{0}''"
 msgstr ""
-"L'unité ne prend pas en charge les calculs de cœur requis par le pool « {0} »"
+"L'unité ne prend pas en charge les calculs de cœur requis par le pool "
+"« {0} »"
 
 #: src/main/java/org/candlepin/controller/Entitler.java:161
 #, java-format
@@ -1435,7 +1446,8 @@ msgstr ""
 #, java-format
 msgid ""
 "This system already has a subscription for the product ''{0}'' attached."
-msgstr "Ce système possède déjà un abonnement attaché pour le produit « {0} »."
+msgstr ""
+"Ce système possède déjà un abonnement attaché pour le produit « {0} »."
 
 #: src/main/java/org/candlepin/controller/Entitler.java:288
 #, java-format
@@ -1516,15 +1528,3 @@ msgstr "Aucun tel type d'unité : {0}"
 #, java-format
 msgid "No such unit type: {0}"
 msgstr "Aucun tel type d'unité : {0}"
-
-#~ msgid "Name of the unit must be shorter than {0} characters."
-#~ msgstr "Le nom de l'unité doit faire moins de {0} caractères."
-
-#~ msgid "System name cannot be null."
-#~ msgstr "Le nom du système ne peut pas être null."
-
-#~ msgid ""
-#~ "Name, value, and label of the override must not exceed {0} characters."
-#~ msgstr ""
-#~ "Le nom, la valeur et l'étiquette de la substitution ne doit pas excéder "
-#~ "{0} caractères."
