--- a/po/it.po
+++ b/po/it.po
@@ -6,14 +6,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-05-01 15:52-0300\n"
-"PO-Revision-Date: 2014-02-26 07:07-0500\n"
-"Last-Translator: fvalen <fvalen@fedoraproject.org>\n"
-"Language-Team: Italian\n"
-"Language: it\n"
+"POT-Creation-Date: 2012-06-27 12:35-0400\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"PO-Revision-Date: 2014-02-26 07:06-0500\n"
+"Last-Translator: fvalen <fvalen@fedoraproject.org>\n"
+"Language-Team: Italian\n"
+"Language: it\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "X-Generator: Zanata 3.3.2\n"
 
@@ -301,7 +301,8 @@ msgstr ""
 #: src/main/java/org/candlepin/resource/ConsumerResource.java:440
 msgid "A unit type of 'person' cannot be used with activation keys"
 msgstr ""
-"Una unità di tipo 'persona' non può essere usata con le chiavi di attivazione"
+"Una unità di tipo 'persona' non può essere usata con le chiavi di "
+"attivazione"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -467,6 +468,7 @@ msgstr "Il sistema con UUID {0} non è un guest virtuale."
 msgid "Deletion record for hypervisor ''{0}'' not found."
 msgstr ""
 "Impossibile trovare le informazioni sulla rimozione per l'Hypervisor ''{0}''."
+""
 
 #: src/main/java/org/candlepin/resource/EntitlementResource.java:92
 #, java-format
@@ -986,12 +988,14 @@ msgstr ""
 
 #: src/main/java/org/candlepin/policy/js/activationkey/ActivationKeyRules.java:116
 #, java-format
-msgid "Cannot add virtual pool ''{0}'' to activation key for physical systems."
+msgid ""
+"Cannot add virtual pool ''{0}'' to activation key for physical systems."
 msgstr ""
 
 #: src/main/java/org/candlepin/policy/js/activationkey/ActivationKeyRules.java:120
 #, java-format
-msgid "Cannot add physical pool ''{0}'' to activation key for virtual systems."
+msgid ""
+"Cannot add physical pool ''{0}'' to activation key for virtual systems."
 msgstr ""
 
 #: src/main/java/org/candlepin/util/ServiceLevelValidator.java:67
@@ -1161,7 +1165,8 @@ msgstr ""
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:51
 msgid ""
-"numeric value out of bounds (<{integer} digits>.<{fraction} digits> expected)"
+"numeric value out of bounds (<{integer} digits>.<{fraction} digits> "
+"expected)"
 msgstr ""
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:55
@@ -1289,8 +1294,8 @@ msgstr "Errore durante l'acquisizione della chiave unità oauth"
 #, java-format
 msgid ""
 "Too many content sets for certificate {0}. A newer client may be available "
-"to address this problem. See kbase https://access.redhat.com/knowledge/"
-"node/129003 for more information."
+"to address this problem. See kbase https://access.redhat.com/knowledge/node/"
+"129003 for more information."
 msgstr ""
 "Troppi set del contenuto per il certificato {0}. Per risolvere questo "
 "problema può essere disponibile un nuovo client. Per maggiori informazioni "
@@ -1313,6 +1318,7 @@ msgstr "Il pool di sottoscrizione {0} non esiste."
 #, java-format
 msgid ""
 "This unit has already had the subscription matching pool ID ''{0}'' attached."
+""
 msgstr ""
 "È già stato assegnato a questa unità il  pool ID ''{0}'' della "
 "sottoscrizione corrispondente."
@@ -1419,7 +1425,8 @@ msgstr ""
 #: src/main/java/org/candlepin/controller/Entitler.java:205
 #, java-format
 msgid "Unable to adjust quantity for the entitlement with id ''{0}'': {1}"
-msgstr "Impossibile regolare la quantità per l'entitlement con id ''{0}'': {1}"
+msgstr ""
+"Impossibile regolare la quantità per l'entitlement con id ''{0}'': {1}"
 
 #: src/main/java/org/candlepin/controller/Entitler.java:284
 #, java-format
@@ -1505,15 +1512,3 @@ msgstr "Tipo di unità non trovata: {0}"
 #, java-format
 msgid "No such unit type: {0}"
 msgstr "Tipo di unità non trovata: {0}"
-
-#~ msgid "Name of the unit must be shorter than {0} characters."
-#~ msgstr "Il nome dell'unità deve avere meno di {0} caratteri."
-
-#~ msgid "System name cannot be null."
-#~ msgstr "Il nome del sistema non può essere vuoto."
-
-#~ msgid ""
-#~ "Name, value, and label of the override must not exceed {0} characters."
-#~ msgstr ""
-#~ "Il nome, il valore e l'etichetta dell'override non deve superare {0} "
-#~ "caratteri."
