--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-05-01 15:52-0300\n"
-"PO-Revision-Date: 2014-02-26 03:45-0500\n"
-"Last-Translator: gcintra <gcintra@fedoraproject.org>\n"
-"Language-Team: Portuguese (Brazil)\n"
-"Language: pt-BR\n"
+"POT-Creation-Date: 2012-06-27 12:35-0400\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"PO-Revision-Date: 2014-02-26 03:44-0500\n"
+"Last-Translator: gcintra <gcintra@fedoraproject.org>\n"
+"Language-Team: Portuguese (Brazil)\n"
+"Language: pt-BR\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "X-Generator: Zanata 3.3.2\n"
 
@@ -976,12 +976,14 @@ msgstr ""
 
 #: src/main/java/org/candlepin/policy/js/activationkey/ActivationKeyRules.java:116
 #, java-format
-msgid "Cannot add virtual pool ''{0}'' to activation key for physical systems."
+msgid ""
+"Cannot add virtual pool ''{0}'' to activation key for physical systems."
 msgstr ""
 
 #: src/main/java/org/candlepin/policy/js/activationkey/ActivationKeyRules.java:120
 #, java-format
-msgid "Cannot add physical pool ''{0}'' to activation key for virtual systems."
+msgid ""
+"Cannot add physical pool ''{0}'' to activation key for virtual systems."
 msgstr ""
 
 #: src/main/java/org/candlepin/util/ServiceLevelValidator.java:67
@@ -1095,12 +1097,14 @@ msgstr "O arquivo não contém o arquivo consumer.json requerido"
 
 #: src/main/java/org/candlepin/sync/Importer.java:360
 msgid "The archive does not contain the required entitlements directory"
-msgstr "O arquivo não contém o diretório de direitos a serviços como requerido"
+msgstr ""
+"O arquivo não contém o diretório de direitos a serviços como requerido"
 
 #: src/main/java/org/candlepin/sync/Importer.java:631
 #, java-format
 msgid "The archive {0} is not a properly compressed file or is empty"
-msgstr "O arquivo {0} não é um arquivo comprimido adequadamente ou está vazio."
+msgstr ""
+"O arquivo {0} não é um arquivo comprimido adequadamente ou está vazio."
 
 #: src/main/java/org/candlepin/sync/ConsumerImporter.java:62
 msgid "No ID for upstream subscription management application."
@@ -1149,7 +1153,8 @@ msgstr ""
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:51
 msgid ""
-"numeric value out of bounds (<{integer} digits>.<{fraction} digits> expected)"
+"numeric value out of bounds (<{integer} digits>.<{fraction} digits> "
+"expected)"
 msgstr ""
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:55
@@ -1277,8 +1282,8 @@ msgstr "Erro ao obter a chave de unidade do oauth"
 #, java-format
 msgid ""
 "Too many content sets for certificate {0}. A newer client may be available "
-"to address this problem. See kbase https://access.redhat.com/knowledge/"
-"node/129003 for more information."
+"to address this problem. See kbase https://access.redhat.com/knowledge/node/"
+"129003 for more information."
 msgstr ""
 "Muitos conjuntos de conteúdo para o certificado {0}. Um cliente mais novo "
 "pode estar disponível para solucionar este problema. Veja kbase https://"
@@ -1301,6 +1306,7 @@ msgstr "Conjunto de subscrição {0} não existe"
 #, java-format
 msgid ""
 "This unit has already had the subscription matching pool ID ''{0}'' attached."
+""
 msgstr ""
 "Esta unidade já  teve sua ID de pool coincidente de subscrição ''{0}'' "
 "anexada."
@@ -1332,6 +1338,7 @@ msgstr "A máquina do convidado não coincide o proprietário da pool: ''{0}''."
 msgid "Pool not available to subscription management applications."
 msgstr ""
 "O pool não está disponível para as aplicações de gerenciamento de subscrição."
+""
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -1390,6 +1397,7 @@ msgid ""
 "Insufficient pool quantity available for adjustment to entitlement ''{0}''."
 msgstr ""
 "Quantidade de Pool insuficiente disponível para acertos aos serviços ''{0}''."
+""
 
 #: src/main/java/org/candlepin/controller/Entitler.java:195
 #: src/main/java/org/candlepin/controller/Entitler.java:200
@@ -1490,14 +1498,3 @@ msgstr "Não foi possível encontrar o(s) tipo(s) de unidade: {0}"
 #, java-format
 msgid "No such unit type: {0}"
 msgstr "Não foi possível encontrar o tipo de unidade: {0}"
-
-#~ msgid "Name of the unit must be shorter than {0} characters."
-#~ msgstr "O nome da unidade deve ser menor que {0} caractéres."
-
-#~ msgid "System name cannot be null."
-#~ msgstr "Nome do sistema não pôde ser nulo."
-
-#~ msgid ""
-#~ "Name, value, and label of the override must not exceed {0} characters."
-#~ msgstr ""
-#~ "Nome, valor e rótulo da substituição não devem exceder {0} caracteres."
