--- a/po/ru.po
+++ b/po/ru.po
@@ -6,16 +6,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-05-01 15:52-0300\n"
-"PO-Revision-Date: 2014-02-26 06:52-0500\n"
-"Last-Translator: ypoyarko <ypoyarko@redhat.com>\n"
-"Language-Team: Russian\n"
-"Language: ru\n"
+"POT-Creation-Date: 2012-06-27 12:35-0400\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
+"PO-Revision-Date: 2014-02-26 06:49-0500\n"
+"Last-Translator: ypoyarko <ypoyarko@redhat.com>\n"
+"Language-Team: Russian\n"
+"Language: ru\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
+"n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
 "X-Generator: Zanata 3.3.2\n"
 
 # translation auto-copied from project Candlepin, version master, document
@@ -489,7 +489,8 @@ msgstr "Продукт с UUID «{0}» не найден."
 #: src/main/java/org/candlepin/resource/ProductResource.java:364
 #, java-format
 msgid "Product with UUID ''{0}'' cannot be deleted while subscriptions exist."
-msgstr "Продукт с UUID {0} не может быть удален, так как у него есть подписки."
+msgstr ""
+"Продукт с UUID {0} не может быть удален, так как у него есть подписки."
 
 #: src/main/java/org/candlepin/resource/ProductResource.java:427
 msgid "Must specify product ID."
@@ -959,12 +960,14 @@ msgstr ""
 
 #: src/main/java/org/candlepin/policy/js/activationkey/ActivationKeyRules.java:116
 #, java-format
-msgid "Cannot add virtual pool ''{0}'' to activation key for physical systems."
+msgid ""
+"Cannot add virtual pool ''{0}'' to activation key for physical systems."
 msgstr ""
 
 #: src/main/java/org/candlepin/policy/js/activationkey/ActivationKeyRules.java:120
 #, java-format
-msgid "Cannot add physical pool ''{0}'' to activation key for virtual systems."
+msgid ""
+"Cannot add physical pool ''{0}'' to activation key for virtual systems."
 msgstr ""
 
 #: src/main/java/org/candlepin/util/ServiceLevelValidator.java:67
@@ -1126,7 +1129,8 @@ msgstr ""
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:51
 msgid ""
-"numeric value out of bounds (<{integer} digits>.<{fraction} digits> expected)"
+"numeric value out of bounds (<{integer} digits>.<{fraction} digits> "
+"expected)"
 msgstr ""
 
 #: src/main/java/org/candlepin/hibernate/CandlepinMessageInterpolator.java:55
@@ -1256,8 +1260,8 @@ msgstr "Ошибка при получении ключа OAuth"
 #, java-format
 msgid ""
 "Too many content sets for certificate {0}. A newer client may be available "
-"to address this problem. See kbase https://access.redhat.com/knowledge/"
-"node/129003 for more information."
+"to address this problem. See kbase https://access.redhat.com/knowledge/node/"
+"129003 for more information."
 msgstr ""
 "Слишком много наборов содержимого для сертификата {0}. Обновление клиента "
 "может это исправить (см. https://access.redhat.com/knowledge/node/129003)."
@@ -1279,6 +1283,7 @@ msgstr "{0} не существует."
 #, java-format
 msgid ""
 "This unit has already had the subscription matching pool ID ''{0}'' attached."
+""
 msgstr "Этой группе уже сопоставлен ID пула «{0}»."
 
 #: src/main/java/org/candlepin/controller/Entitler.java:114
@@ -1454,15 +1459,3 @@ msgstr "Нет таких типов: {0}"
 #, java-format
 msgid "No such unit type: {0}"
 msgstr "Нет такого типа: {0}"
-
-#~ msgid "Name of the unit must be shorter than {0} characters."
-#~ msgstr "Имя группы не может превышать {0} знаков."
-
-#~ msgid "System name cannot be null."
-#~ msgstr "Имя системы не может быть пустым."
-
-#~ msgid ""
-#~ "Name, value, and label of the override must not exceed {0} characters."
-#~ msgstr ""
-#~ "Максимально допустимое число знаков для имени, значения и метки "
-#~ "переопределения равно {0}"
